@@ -31,6 +31,7 @@ Version 1.0.8.7
      * Fixed a problem with variable names in Prolog (BenBE)
      * Some color changes for AutoIt (BenBE)
      * Added support for basic include directive processing for AutoIt (BenBE)
+     * Added support for ::-style labels as comments (SF#2947393, BenBE)
 Version 1.0.8.6
   -  Added language files
      * Clojure (Jess Johnson)
